# vqvae_lattent_actions

./: .gitignore  README.md  config.ckpt  dataset.py  main.ipynb  pyproject.toml  train.py  train.sh
configs/: config.yaml
configs/model/: fsq_vqvae.yaml
vqvae_latent_actions/: __init__.py
vqvae_latent_actions/models/: __init__.py  fsq_vqvae.py
vqvae_latent_actions/training/: eval.py  loop.py
vqvae_latent_actions/utils/: logging.py  metrics.py
